--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <header>
       <div class="container">
-        <h1>{{ site.title | default: site.github.repository_name }} Durak </h1>
+        <h1> Durak </h1>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="downloads">
