--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <header>
       <div class="container">
         <h1> Durak </h1>
-        <h2></h2>
+        <h2> (“Fool” from Russian) </h2>
 
         <section id="downloads">
           {% if site.show_downloads %}
