--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
       <div class="container">
         <h1> Durak </h1>
         <h2> (“Fool” from Russian) </h2>
-
+        <img src="https://github.com/AlexTatarov/RUG-Multi-Agent-Systems/blob/master/Regular_Durak.jpg">
         <section id="downloads">
           {% if site.show_downloads %}
             <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
