--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <header>
       <div class="container">
         
+        <h1> Durak </h1>
         <h2> (“Fool” from Russia) </h2>
         
         <section id="downloads">
