--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
   <body>
     <header>
       <div class="container">
-        <h1> Durak </h1>
-        <h2> (“Fool” from Russia) </h2>
+        <h1> <center> Durak </center> </h1>
+        <h2> <center> (“Fool” from Russia) </center> </h2>
         
         <section id="downloads">
           {% if site.show_downloads %}
