--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="container">
-        <h1> <center> <pre class="tab">   Durak </pre> </center> </h1>
+        <h1> <center> <pre>   Durak </pre> </center> </h1>
         <h2> <center> 'Fool' from Russia </center> </h2>
         
         <section id="downloads">
