--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
   <body>
     <header>
       <div class="container">
-        <h1> <center> <pre>   Durak </pre> </center> </h1>
-        <h2> <center> 'Fool' from Russia </center> </h2>
+        <h1> <center> Durak </center> </h1>
+        <h2> <center> "Fool" </center> </h2>
         
         <section id="downloads">
           {% if site.show_downloads %}
