--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <header>
       <div class="container">
         <h1> <center> Durak </center> </h1>
-        <h2> <center> "Fool" </center> </h2>
+        <h2> <center> "A Card Game" </center> </h2>
         
         <section id="downloads">
           {% if site.show_downloads %}
